# YOLO11-Edge

./: CMakeLists.txt  README.md
include/: postprocess.hpp  preprocess.hpp  yolo11-edge.hpp
src/: postprocess.cpp  preprocess.cpp  yolo11-edge.cpp
